--- a/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ResetPassword.cshtml
@@ -1,9 +1,48 @@
 ﻿@model PMS_PropertyHapa.Models.DTO.ResetPasswordDto
 @{
     ViewData["Title"] = "Reset Password";
+    Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
 
-<form method="post">
+
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            var urlParams = new URLSearchParams(window.location.search);
+            var encryptedEmail = urlParams.get('email');
+            $('#Email').val(encryptedEmail);
+
+            $('#resetPasswordForm').on('submit', function (e) {
+                e.preventDefault();
+
+                var formData = {
+                    Email: encryptedEmail, 
+                    Password: $('#Password').val(),
+                    ConfirmPassword: $('#ConfirmPassword').val()
+                };
+
+                $.ajax({
+                    url: 'https://localhost:7178/api/v1/UsersAuth/reset-password',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(formData),
+                    success: function (response) {
+                        alert("Password reset successfully.");
+                    },
+                    error: function (xhr, status, error) {
+                        alert("Error resetting password: " + xhr.responseText);
+                    }
+                });
+            });
+        });
+    </script>
+}
+
+
+
+
+<form class="theme-form needs-validation" id="resetPasswordForm" novalidate="" method="post">
     <div class="container border p-4">
         <div class="row text-center">
             <h1>Reset Password</h1>
@@ -25,7 +64,3 @@
         </div>
     </div>
 </form>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
