--- a/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_IdentityLayout.cshtml
@@ -97,5 +97,6 @@
     <script src="~/Dashboard/assets/js/script.js"></script>
     <!-- login js-->
     <!-- Plugin used-->
+    @RenderSection("Scripts", required: false)
   </body>
 </html>
