--- a/PMS-PropertyHapa/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Login.cshtml
@@ -3,6 +3,42 @@
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
+
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        $(function () {
+            $('.login-form').on('submit', function (e) {
+                e.preventDefault();
+
+                var loginData = {
+                    UserName: $('#UserName').val(),
+                    Password: $('#Password').val()
+                };
+
+                $.ajax({
+                    url: 'https://localhost:7178/api/v1/UsersAuth/login',
+                    type: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify(loginData),
+                    success: function (response) {
+                        console.log(response);
+                        alert("Logged In Successfully");
+                    },
+                    error: function (xhr, status, error) {
+                        console.error(xhr.responseText);
+                        alert("Wrong UserName or Password");
+                    }
+                });
+            });
+        });
+    </script>
+
+
+}
+
+
+
 <form class="theme-form login-form needs-validation" novalidate="" method="post">
     <h4>Login</h4>
     <h6>Welcome back! Log in to your account.</h6>
@@ -30,16 +66,6 @@
     <div class="form-group">
         <button class="btn btn-primary btn-block" type="submit">Sign in</button>
     </div>
-   @*  <div class="login-social-title">
-        <h5>Sign in with</h5>
-    </div>
-    <div class="form-group">
-        <ul class="login-social">
-            <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="linkedin"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank"><i data-feather="twitter"></i></a></li>
-            <li><a href="https://www.facebook.com" target="_blank"><i data-feather="facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/login" target="_blank"><i data-feather="instagram">                  </i></a></li>
-        </ul>
-    </div> *@
+ 
     <p>Don't have account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
 </form>
