--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -10,14 +10,14 @@
         <label>Email Address</label>
         <div class="input-group">
             <span class="input-group-text"><i class="icon-email"></i></span>
-            <input asp-for="UserName" type="text" class="form-control" placeholder="Username..." required="" />
+            <input id="Email" type="email" class="form-control" placeholder="Email..." required="" />
         </div>
     </div>
     <div class="form-group">
         <label>Password</label>
         <div class="input-group">
             <span class="input-group-text"><i class="icon-lock"></i></span>
-            <input asp-for="Password" type="password" class="form-control" placeholder="Password..." />
+            <input id="Password" type="password" class="form-control" placeholder="Password..." required="" />
             <div class="show-hide"><span class="show"></span></div>
         </div>
     </div>
@@ -25,21 +25,10 @@
         <div class="checkbox">
             <input id="checkbox1" type="checkbox">
             <label class="text-muted" for="checkbox1">Remember password</label>
-        </div><a class="link" href="forget-password.html">Forgot password?</a>
+        </div><a class="link" href="/auth/ForgotPassword">Forgot password?</a>
     </div>
     <div class="form-group">
         <button class="btn btn-primary btn-block" type="submit">Sign in</button>
     </div>
-    @*  <div class="login-social-title">
-    <h5>Sign in with</h5>
-    </div>
-    <div class="form-group">
-    <ul class="login-social">
-    <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="linkedin"></i></a></li>
-    <li><a href="https://twitter.com" target="_blank"><i data-feather="twitter"></i></a></li>
-    <li><a href="https://www.facebook.com" target="_blank"><i data-feather="facebook"></i></a></li>
-    <li><a href="https://www.instagram.com/login" target="_blank"><i data-feather="instagram">                  </i></a></li>
-    </ul>
-    </div> *@
-    <p>Don't have account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
+    <p>Don't have an account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
 </form>
