--- a/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
-<form class="theme-form login-form needs-validation" novalidate="" method="post">
+<form class="theme-form login-form needs-validation" novalidate="" asp-action="Login" method="post">
     <h4>Login</h4>
     <h6>Welcome back! Log in to your account.</h6>
     <div class="form-group">
