--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                             </div>
                             <ul class="profile-dropdown onhover-show-div">
                                 <li><a href="user-profile.html"><i data-feather="user"></i><span>Account</span></a></li>
-                                <li><a href="login.html"><i data-feather="log-in"> </i><span>Log in</span></a></li>
+                                <li><a href="@Url.Action("Logout","Account")"><i data-feather="log-in"> </i><span>Log in</span></a></li>
                             </ul>
                         </li>
                     </ul>
