--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -155,6 +155,7 @@
                                     </a>
                                     <ul class="sidebar-submenu">
                                         <li><a href="@Url.Action("Index","GroupRoles")">View Roles</a></li>
+                                        <li><a href="@Url.Action("Index","Groups")">View Group</a></li>
                                     </ul>
                                 </li>
                             </ul>
