--- a/PMS-PropertyHapa/Views/Auth/Register.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/Register.cshtml
@@ -8,15 +8,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(function () {
+            $('.register-form').find('input[type=text], input[type=password], select').val('');
+
             $('.register-form').on('submit', function (e) {
                 e.preventDefault();
 
                 var role = $('#Role').val().toLowerCase();
                 var apiUrl;
                 switch (role) {
-                    case 'tenant':
-                        apiUrl = 'https://localhost:7178/api/v1/UsersAuth/register/tenant';
-                        break;
                     case 'admin':
                         apiUrl = 'https://localhost:7178/api/v1/UsersAuth/register/admin';
                         break;
@@ -43,6 +42,7 @@
                     success: function (response) {
                         console.log(response);
                         alert("Registered Successfully");
+                        window.location.href = "/Auth/Login";
                     },
                     error: function (xhr, status, error) {
                         console.error(xhr.responseText);
@@ -66,24 +66,26 @@
         </div>
         <div class="row">
             <div class="col-md-12 pb-2">
-                <input asp-for="UserName" type="text" class="form-control" placeholder="Username..." />
+                <input asp-for="UserName" type="text" class="form-control" placeholder="Username..." autocomplete="off" />
             </div>
             <div class="col-md-12 pb-2">
-                <input asp-for="Name" type="text" class="form-control" placeholder="Name..." />
+                <input asp-for="Name" type="text" class="form-control" placeholder="Name..." autocomplete="off" />
             </div>
             <div class="col-md-12 pb-2">
-                <input asp-for="Password" type="password" class="form-control" placeholder="Password..." />
+                <input asp-for="Password" type="password" class="form-control" placeholder="Password..." autocomplete="off" />
             </div>
             <div class="col-md-12 pb-2">
                 <select asp-for="Role" class="form-select">
                     <option disabled selected>--Select Role--</option>
-                    <option value="Tenant">Tenant</option>
                     <option value="Admin">Admin</option>
                     <option value="User">User</option>
                 </select>
             </div>
             <div class="col-md-12 pb-2">
                 <button type="submit" class="btn btn-success w-100">Register</button>
+            </div>
+            <div class="col-md-12 pb-2">
+                <a class="btn btn-primary w-100" href="javascript:history.back()">Go Back</a>
             </div>
         </div>
     </div>
