--- a/PMS-PropertyHapa/Views/Auth/UpdateProfile.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/UpdateProfile.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PMS_PropertyHapa.Models.DTO.ProfileModel
 
 @{
-    ViewData["Title"] = "Update Profile";
+    ViewData["Title"] = "Profile";
     Layout = "~/Views/Shared/_IdentityLayout.cshtml";
 }
 
