--- a/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
@@ -151,11 +151,12 @@
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M2.94995 14.2074C2.94995 8.91344 5.20495 7.14844 11.969 7.14844C18.733 7.14844 20.988 8.91344 20.988 14.2074C20.988 19.5004 18.733 21.2654 11.969 21.2654C5.20495 21.2654 2.94995 19.5004 2.94995 14.2074Z" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                                                 </g>
                                             </g>
-                                        </svg><span>Manage Roles</span>
+                                        </svg><span>Home</span>
                                     </a>
                                     <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("Index","GroupRoles")">View Roles</a></li>
-                                        <li><a href="@Url.Action("Index","Groups")">View Group</a></li>
+                                        <li><a href="@Url.Action("UpdateProfile", "auth")">Update Profile</a></li>
+                                        <li><a href="@Url.Action("ChangePassword", "auth")">Change Password</a></li>
+                                        <li><a href="@Url.Action("Logout", "User")">Logout</a></li>
                                     </ul>
                                 </li>
                             </ul>
