--- a/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
+++ b/PMS-PropertyHapa/Views/Auth/ChangePassword.cshtml
@@ -43,7 +43,7 @@
     });
 </script>
 
-<div class="container">
+<div class="theme-form needs-validation" method="post">
     <h2>Change Password</h2>
     <form id="changePasswordForm">
         <div class="form-group">
