--- a/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Groups/Index.cshtml
@@ -101,11 +101,11 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="AssignRolelables">Assign Roles</h5> &nbsp;
-                                                        <div class="row">
+@*                                                         <div class="row">
                                           <div class="col-lg-12">
                                                  <input type="button" class="btn btn-success" value="Check All" onclick="checkallcheckboxes();"/>
                                             </div>
-                                        </div>
+                                        </div> *@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal"></button>
             </div>
             <div class="modal-body">
